--- a/redrail_min.css
+++ b/redrail_min.css
@@ -403,7 +403,7 @@ h6 p {
 /*引用*/
 blockquote {
     padding: 0.5rem 1rem;
-    border-left: 8px solid #2f845e;
+    border-left: 6px solid #2f845e;
     background-color: rgba(66, 185, 131, 0.1);
     border-radius: 4px;
 }
@@ -426,41 +426,41 @@ table {
 }
 
 table tr {
-    border-top: 1px solid var(--main-6);
+    border: 1px solid #dfe2e5;
     margin: 0;
     padding: 0;
 }
 
 table tr:nth-child(2n),
 thead {
-    background-color: #fafafa;
+    background-color: #f8f8f8;
 }
 
-table tr th {
+table th {
     font-weight: bold;
-    border: 1px solid var(--main-6);
-    border-bottom: 0;
-    text-align: left;
+    border: 1px solid #e5dfdf;
+    border-bottom: 0px;
     margin: 0;
     padding: 6px 13px;
 }
 
-table tr td {
-    border: 1px solid var(--main-6);
-    text-align: left;
+table td {
+    border: 1px solid #dfe2e5;
     margin: 0;
     padding: 6px 13px;
+    border: 1px solid #e5dfdf;
 }
 
-table tr th:first-child,
-table tr td:first-child {
+table th:first-child,
+table td:first-child {
     margin-top: 0;
 }
 
-table tr th:last-child,
-table tr td:last-child {
+table th:last-child,
+table td:last-child {
     margin-bottom: 0;
 }
+
 
 #write strong {
     padding: 0.1em;
@@ -480,7 +480,7 @@ table tr td:last-child {
 
 [md-inline='inline_math'] {
     color: #000000;
-    font-size: 110%;
+    font-size: 130%;
 
 }
 
